Removed my name
I removed my name and the href to my website in the header.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="ridiculous.html"><img class="feetimage" src="https://ci.phncdn.com/pics/albums/009/620/811/144282341/(m=e-yaaGqaa)(mh=dB4HO3PxwvzaBIav)original_144282341.jpg" alt=""></a>
       </td>
       <td>
-        <h1><a href="https://www.tylermckinion.com/">Sir Tyler McKinion</a></h1>
+        <h1>Sir Tyler</h1>
         <p>He has <em>absolutely</em> no clue what he is doing.</p>
         <p>Penis penis penis</p>
       </td>
